# OHMComm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CMakeLists-cryptopp.txt  CMakeLists-opus.txt  opus-version.h  submodules.cmake
documents/: Aufgabenverteilung.odt  Aufgabenverteilung.txt  Doc.txt  OHMCommPres.odp  Präsenationsthemen.txt  Präsentationsthemen.txt
documents/Report/: Report.synctex  Report.tex  test.tex  thesis.bib
documents/Report-Template/: test.synctex  test.tex
examples/: CMakeLists.txt  socket.cpp
include/: AudioDevice.h  AudioHandler.h  AudioHandlerFactory.h  AudioIO.h  AudioProcessor.h  AudioProcessorFactory.h  AudioProcessorStatistic.h  ConfigurationMode.h  CryptoSuite.h  FileProcessor.h  KeyValuePairs.h  Logger.h  NetworkWrapper.h  NetworkWrappingProcessor.h  OHMComm.h  OpusDecoder.h  OpusEncoder.h  Parameters.h  ParticipantDatabase.h  PassiveConfigurationHandler.h  PayloadType.h  PlaybackListener.h  PortAudioWrapper.h  ProcessorALaw.h  ProcessorFile.h  ProcessorManager.h  ProcessorMuLaw.h  ProcessorOpus.h  ProcessorRTP.h  ProcessorUDP.h  ProcessorWAV.h  ProfilingAudioProcessor.h  RTAudioWrapper.h  RTCPHandler.h  RTCPPackage.h  RTCPPackageHandler.h  RTPBuffer.h  RTPBufferAlternative.h  RTPBufferHandler.h  RTPListener.h  (+13 more)
include/audio/: AudioDevice.h  AudioHandler.h  AudioHandlerFactory.h  PortAudioWrapper.h  RTAudioWrapper.h
include/codecs/: AMRCodec.h  G711Alaw.h  G711Mulaw.h  GSMCodec.h  OpusCodec.h  ProcessorALaw.h  ProcessorMuLaw.h  ProcessorOpus.h  ProcessoriLBC.h  SpeexCodec.h  g711common.h
include/config/: ConfigurationMode.h  FileConfiguration.h  InteractiveConfiguration.h  LibraryConfiguration.h  ParameterConfiguration.h  PassiveConfiguration.h
include/crypto/: CryptoSuite.h  CryptographicContext.h
include/filters/: GainControl.h
include/network/: MulticastNetworkWrapper.h  NetworkGrammars.h  NetworkWrapper.h  NetworkWrappingProcessor.h  SocketAddress.h  TCPWrapper.h  UDPWrapper.h
lib/: rtaudio_static.lib
lib/cpptest-1.1.2/: CMakeLists.txt
lib/cpptest-1.1.2/win/VisualStudio.NET/test/: test.vcproj
lib/cpptest-lite/: .travis.yml  CMakeLists.txt  Readme.md
lib/cpptest-lite/include/: CollectorOutput.h  CompilerOutput.h  ConsoleOutput.h  HTMLOutput.h  Output.h  ParallelSuite.h  SynchronizedOutput.h  TestSuite.h  TextOutput.h  asserts.h  cpptest-main.h  cpptest.h
lib/cpptest-lite/src/: CollectorOutput.cpp  CompilerOutput.cpp  ConsoleOutput.cpp  HTMLOutput.cpp  ParallelSuite.cpp  SynchronizedOutput.cpp  TestSuite.cpp  TextOutput.cpp
lib/cpptest-lite/test/: TestMacros.cpp  TestMacros.h  TestOutputs.cpp  TestOutputs.h  TestParallelSuite.cpp  TestParallelSuite.h  TestSuites.h  run_tests.cpp
lib/opus-1.1/: CMakeLists.txt
lib/opus-1.1/celt/: CMakeLists.txt
lib/opus-1.1/silk/: CMakeLists.txt
lib/opus-1.1/silk/fixed/: CMakeLists.txt
lib/opus-1.1/silk/float/: CMakeLists.txt
lib/opus-1.1/src/: CMakeLists.txt
lib/opus-1.1/win32/: version.h
src/: AudioHandler.cpp  AudioHandlerFactory.cpp  AudioIO.cpp  AudioProcessor.cpp  AudioProcessorFactory.cpp  AudioProcessorStatistic.cpp  CMakeLists.txt  ConfigurationMode.cpp  CryptoppSuite.cpp  DummyCryptoSuite.cpp  FileProcessor.cpp  Logger.cpp  NetworkWrapper.cpp  NetworkWrappingProcessor.cpp  OHMComm.cpp  OHMCommStandalone.cpp  OpenSSLSuite.cpp  OpusDecoder.cpp  OpusEncoder.cpp  Parameters.cpp  PassiveConfigurationHandler.cpp  PortAudioWrapper.cpp  ProcessorALaw.cpp  ProcessorManager.cpp  ProcessorMuLaw.cpp  ProcessorOpus.cpp  ProcessorRTP.cpp  ProcessorUDP.cpp  ProcessorWAV.cpp  ProfilingAudioProcessor.cpp  RTAudioWrapper.cpp  RTCPHandler.cpp  RTCPPackage.cpp  RTCPPackageHandler.cpp  RTPBuffer.cpp  RTPBufferAlternative.cpp  RTPListener.cpp  RTPPackage.cpp  RTPPackageHandler.cpp  RTPWrapper.cpp  (+8 more)
src/audio/: AudioHandler.cpp  AudioHandlerFactory.cpp  PortAudioWrapper.cpp  RTAudioWrapper.cpp
src/codecs/: AMRCodec.cpp  G711Alaw.cpp  G711Mulaw.cpp  GSMCodec.cpp  OpusCodec.cpp  ProcessorALaw.cpp  ProcessorMuLaw.cpp  ProcessorOpus.cpp  ProcessoriLBC.cpp  SpeexCodec.cpp
src/config/: ConfigurationMode.cpp  FileConfiguration.cpp  InteractiveConfiguration.cpp  LibraryConfiguration.cpp  ParameterConfiguration.cpp  PassiveConfiguration.cpp
src/crypto/: CryptoppSuite.cpp  DummyCryptoSuite.cpp  OpenSSLSuite.cpp
src/filters/: GainControl.cpp
src/network/: MulticastNetworkWrapper.cpp  NetworkGrammars.cpp  NetworkWrapper.cpp  NetworkWrappingProcessor.cpp  SocketAddress.cpp  TCPWrapper.cpp  UDPWrapper.cpp
src/processors/: AudioProcessor.cpp  AudioProcessorFactory.cpp  GainControl.cpp  ProcessorManager.cpp  ProcessorWAV.cpp  ProfilingAudioProcessor.cpp  Resampler.cpp  wavfile.cpp
src/rtp/: JitterBuffers.cpp  ParticipantDatabase.cpp  ProcessorRTP.cpp  RTCPHandler.cpp  RTCPPackageHandler.cpp  RTPBuffer.cpp  RTPBufferAlternative.cpp  RTPListener.cpp  RTPPackageHandler.cpp
src/sip/: Authentication.cpp  SDPMessageHandler.cpp  SIPConfiguration.cpp  SIPGrammar.cpp  SIPHandler.cpp  SIPPackageHandler.cpp  SIPRequest.cpp  SIPSession.cpp  STUNClient.cpp  SupportedFormats.cpp
test/: CMakeLists.txt  RTPBuffer.txt  TestAudioProcessors.cpp  TestAudioProcessors.h  TestConfigurationModes.cpp  TestConfigurationModes.h  TestCryptoSuite.cpp  TestCryptoSuite.h  TestKeyValuePair.cpp  TestKeyValuePair.h  TestNetworkGrammars.cpp  TestNetworkGrammars.h  TestNetworkWrappers.cpp  TestNetworkWrappers.h  TestParameters.cpp  TestParameters.h  TestRTCP.cpp  TestRTCP.h  TestRTP.cpp  TestRTP.h  TestRTPBuffer.cpp  TestRTPBuffer.h  TestSocketAddress.cpp  TestSocketAddress.h  TestUserInput.cpp  TestUserInput.h  TestUtility.cpp  TestUtility.h  Tests.cpp  Tests.h  UDPWrapper.txt  test.config
test/audio/: TestAudioHandler.cpp  TestAudioHandler.h
test/rtp/: TestRTCP.cpp  TestRTCP.h  TestRTP.cpp  TestRTP.h  TestRTPBuffer.cpp  TestRTPBuffer.h
test/sip/: TestSDP.cpp  TestSDP.h  TestSIPGrammar.cpp  TestSIPGrammar.h  TestSIPHandler.cpp  TestSIPHandler.h  TestSIPPackages.cpp  TestSIPPackages.h  TestSIPRequest.cpp  TestSIPRequest.h  TestSTUNClient.cpp  TestSTUNClient.h
(+83 files in other folders)
